--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-icons": "^5.2.1",
 		"styled-components": "^6.1.8"
 	},
 	"devDependencies": {
